# splunk-arcade

./: .gitignore  Makefile  README.md  dev.go.Dockerfile  dev.py.Dockerfile  devspace.yaml
cabinet/: Dockerfile  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
cabinet/src/: __init__.py  models.py  routes.py
chart/: Chart.yaml  values.yaml
chart/charts/: splunk-otel-collector-0.113.0.tgz
chart/templates/: deployment-cabinet.yaml  deployment-player-content.yaml  deployment-player-router.yaml  deployment-portal.yaml  deployment-quiz.yaml  deployment-scoreboard.yaml  ingress.yaml  namespace.yaml  role.yaml  rolebinding.yaml  service-cabinet.yaml  service-otel-collector.yaml  service-player-content.yaml  service-player-router.yaml  service-portal.yaml  service-quiz.yaml  service-scoreboard.yaml  (+1 more)
player-cloud/: Dockerfile  entrypoint.apply.sh  entrypoint.destroy.sh  main.tf  outputs.tf  vars.tf
player-content/: Dockerfile  app.py  course-content.json  entrypoint.sh  pyproject.toml  questions.json  requirements.txt  start-dev.sh  walkthroughs.json
player-router/: Dockerfile  go.mod  main.go  start-dev.sh
portal/: Dockerfile  app.py  entrypoint.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  start-dev.sh
quiz/: Dockerfile  TESTQUERY.html  app.py  entrypoint.sh  pyproject.toml  questions.json  requirements.txt
quiz/src/: __init__.py  appnew.py  questions.py  routes.py
scoreboard/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
util/: purge_token_check.sh
(+88 files in other folders)
