[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "wheel",
]

[project]
name = "quiz"
description = "The splunk arcade quiz service"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

[tool.ruff]
exclude = [
    ".direnv",
    ".eggs",
    ".git-rewrite",
    ".mypy_cache",
    ".nox",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "app/static",
    "app/templates"
]

line-length = 100
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "C90", "I", "N", "UP", "PL", "RUF"]
ignore = []

fixable = ["I"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"